Fix padding & z-index

--- a/app/assets/stylesheets/blocks/_entry.scss
+++ b/app/assets/stylesheets/blocks/_entry.scss
@@ -14,6 +14,7 @@
   position: relative;
   text-align: center;
   width: 100%;
+  z-index: 101;
 
   a {
     display: inline-block;
