--- a/app/assets/stylesheets/blocks/_share.scss
+++ b/app/assets/stylesheets/blocks/_share.scss
@@ -4,13 +4,12 @@
   border-radius: 22px;
   border: 2px solid var(--color-border);
   bottom: 20px;
-  box-shadow: var(--share-shadow);
   color: var(--color-text-alt);
   display: flex;
   font-size: 14px;
   height: 44px;
   justify-content: center;
-  padding: 0 var(--gutter-vertical);
+  padding: 0 22px;
   position: fixed;
   right: 20px;
   z-index: 100;
